@@ -120,12 +120,6 @@ QVariant EntryModel::data(const QModelIndex& index_, int role_) const {
       if(!field) {
         return QVariant();
       }
-      if(field->type() == Data::Field::Bool) {
-        return m_checkPix;
-      } else if(field->type() == Data::Field::Rating) {
-        return GUI::RatingWidget::pixmap(value);
-      }
-
       entry = this->entry(index_);
       if(!entry) {
         return QVariant();
@@ -154,11 +148,19 @@ QVariant EntryModel::data(const QModelIndex& index_, int role_) const {
         return KIcon(*icon);
       }
       // otherwise just return the image for the entry
-      // we don't need a formatted value for image id
+      // we don't need a formatted value for any pixmaps
       value = entry->field(field);
       if(value.isEmpty()) {
         return QVariant();
       }
+
+      if(field->type() == Data::Field::Bool) {
+        // assume any non-empty value equals true
+        return m_checkPix;
+      } else if(field->type() == Data::Field::Rating) {
+        return GUI::RatingWidget::pixmap(value);
+      }
+
       if(m_imagesAreAvailable && field->type() == Data::Field::Image) {
         const Data::Image& img = ImageFactory::imageById(value);
         if(!img.isNull()) {
